--- a/anvil.yaml
+++ b/anvil.yaml
@@ -11,7 +11,7 @@ services:
 - source: /runtime/services/google.yml
   client_config: {}
   server_config: {}
-startup: {type: form, module: bank_users.main_form}
+startup: {type: form, module: bank_users.borrower_rgistration_form.new_loan_request}
 package_name: bank_client
 allow_embedding: false
 name: P2p Bank
@@ -131,6 +131,15 @@ db_schema:
     - name: registration_approve
       admin_ui: {width: 200, order: 31}
       type: bool
+    - name: max_amount
+      admin_ui: {width: 200}
+      type: string
+    - name: min_amount
+      admin_ui: {width: 200}
+      type: string
+    - name: tenure
+      admin_ui: {width: 200}
+      type: string
     title: user_profile
   borrower:
     title: borrower
@@ -139,9 +148,6 @@ db_schema:
     columns:
     - name: email_id
       admin_ui: {width: 200, order: 0}
-      type: string
-    - name: coustmer_id
-      admin_ui: {width: 200, order: 1}
       type: string
     - name: user_name
       admin_ui: {width: 200, order: 2}
@@ -164,6 +170,18 @@ db_schema:
     - name: borrower_approve_date_time
       admin_ui: {width: 200, order: 8}
       type: datetime
+    - name: borrower_id
+      admin_ui: {width: 200}
+      type: number
+    - name: last_confirm
+      admin_ui: {width: 200}
+      type: bool
+    - name: loan_type
+      admin_ui: {width: 200}
+      type: string
+    - name: status
+      admin_ui: {width: 200}
+      type: bool
   product_borrower:
     client: none
     server: full
