--- a/client_code/bank_users/borrower_rgistration_form/new_loan_request/loan_type/form_template.yaml
+++ b/client_code/bank_users/borrower_rgistration_form/new_loan_request/loan_type/form_template.yaml
@@ -20,7 +20,7 @@ components:
   layout_properties:
     col_widths: {}
     grid_position: AXHVFQ,NWAUQM
-- name: drop_down_1
+- name: loan_type_dd
   properties:
     items: [K-12 Educational loan, Business loan]
     placeholder: select one
@@ -28,7 +28,7 @@ components:
     background: white
   type: DropDown
   layout_properties: {grid_position: 'AXHVFQ,UYJPUB'}
-  event_bindings: {change: drop_down_1_change}
+  event_bindings: {change: loan_type_dd_change}
 - name: spacer_1
   properties: {height: 94}
   type: Spacer
