Edited borrower_server, settings, bank_users.borrower_rgistration_form.new_loan_request and bank_users.borrower_rgistration_form.new_loan_request.check_out_form

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -183,7 +183,7 @@ db_schema:
       admin_ui: {width: 200}
       type: bool
   product_borrower:
-    client: none
+    client: full
     server: full
     columns:
     - name: names
