--- a/client_code/bank_users/borrower_rgistration_form/new_loan_request/form_template.yaml
+++ b/client_code/bank_users/borrower_rgistration_form/new_loan_request/form_template.yaml
@@ -72,7 +72,7 @@ components:
     bold: false
     underline: false
     include_placeholder: true
-  name: tenure
+  name: tenure_dd
   layout_properties:
     col_widths: {}
     grid_position: XAMTRF,DVEKRQ
